fix: recursive JavaFX search